--- a/webscrapping/day6/나라장터에서 입찰공고목록 수집하기.ipynb
+++ b/webscrapping/day6/나라장터에서 입찰공고목록 수집하기.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 80,
    "id": "e5ef3648",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 81,
    "id": "6c6ba647",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 82,
    "id": "a7572b27",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 83,
    "id": "55555fa9",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 84,
    "id": "ed7f1cd7",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 85,
    "id": "10bc3698",
    "metadata": {},
    "outputs": [],
@@ -75,24 +75,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "id": "25172023",
    "metadata": {},
    "outputs": [],
    "source": [
-    "참가제한지역 = Select(driver.find_element(By.CSS_SELECTOR, value='mf_wfm_container_tacBidPbancLst_contents_tab2_body_sbxOdnLmtLgdngCd'))\n",
+    "참가제한지역 = Select(driver.find_element(By.CSS_SELECTOR, '#mf_wfm_container_tacBidPbancLst_contents_tab2_body_sbxOdnLmtLgdngCd'))\n",
     "참가제한지역.select_by_visible_text('부산광역시')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "f18d9899",
    "metadata": {},
    "outputs": [],
    "source": [
-    "검색요소 = driver.find_element(By.CSS_SELECTOR, value='#mf_wfm_container_tacBidPbancLst_contents_tab2_body_btnS0004')\n",
+    "검색요소 = driver.find_element(By.CSS_SELECTOR, '#mf_wfm_container_tacBidPbancLst_contents_tab2_body_btnS0004')\n",
     "driver.execute_script(\"arguments[0].click();\", 검색요소)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "d0b5f44a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "입찰공고목록 = driver.find_elements(By.CSS_SELECTOR,\"#mf_wfm_container_tacBidPbancLst_contents_tab2_body_gridView1_body_tbody tr:not([style*='display: none;'])\")\n",
+    "print(len(입찰공고목록))"
    ]
   }
  ],
