--- a/webscrapping/day6/나라장터에서 입찰공고목록 수집하기.ipynb
+++ b/webscrapping/day6/나라장터에서 입찰공고목록 수집하기.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 184,
    "id": "e5ef3648",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "6c6ba647",
    "metadata": {},
    "outputs": [],
@@ -23,6 +23,7 @@
     "chrome_options = Options()\n",
     "chrome_options.add_experimental_option('detach', True) # 브라우저 종료방지\n",
     "driver = webdriver.Chrome(options=chrome_options)\n",
+    "driver.implicitly_wait(10)\n",
     "# 웹사이트 열기\n",
     "driver.get('https://www.g2b.go.kr/')\n",
     "# 브라우저 창 최대화\n",
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 196,
    "id": "a7572b27",
    "metadata": {},
    "outputs": [],
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 197,
    "id": "55555fa9",
    "metadata": {},
    "outputs": [],
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 199,
    "id": "ed7f1cd7",
    "metadata": {},
    "outputs": [],
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 200,
    "id": "10bc3698",
    "metadata": {},
    "outputs": [],
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 201,
    "id": "25172023",
    "metadata": {},
    "outputs": [],
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 202,
    "id": "f18d9899",
    "metadata": {},
    "outputs": [],
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 209,
    "id": "d0b5f44a",
    "metadata": {},
    "outputs": [
@@ -113,6 +114,50 @@
     "입찰공고목록 = driver.find_elements(By.CSS_SELECTOR,\"#mf_wfm_container_tacBidPbancLst_contents_tab2_body_gridView1_body_tbody tr:not([style*='display: none;'])\")\n",
     "print(len(입찰공고목록))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c5ee32e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "공고번호 : R25BK00879222-000\n",
+      "공고명 : 부산보험회관 팬코일유니트 드레인 배관교체공사\n",
+      "추정금액 : \n"
+     ]
+    }
+   ],
+   "source": [
+    "for 입찰공고 in 입찰공고목록:\n",
+    "  공고항목들 = 입찰공고.find_elements(By.TAG_NAME, 'td')\n",
+    "  # for 공고항목 in 공고항목들:\n",
+    "  #   print(공고항목.text)\n",
+    "  공고번호 = 공고항목들[5].text        \n",
+    "  공고명요소 = 공고항목들[6]  \n",
+    "  공고명 = 공고명요소.text\n",
+    "  driver.execute_script(\"arguments[0].click();\", 공고명요소)\n",
+    "  \n",
+    "  추정금액요소 = driver.find_element(By.XPATH, '/html/body/div[1]/div[3]/div/div[2]/div/div[2]/div[4]/div/div[17]/table/tbody/tr[2]/td[2]/input')\n",
+    "  print(추정금액요소.get_attribute('value'))\n",
+    "  추정금액 = 추정금액요소.get_attribute('value')\n",
+    "  print(f'공고번호 : {공고번호}')\n",
+    "  print(f'공고명 : {공고명}')\n",
+    "  print(f'추정금액 : {추정금액}')\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f52d5a01",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
