--- a/webscrapping/day6/나라장터에서 입찰공고목록 수집하기.ipynb
+++ b/webscrapping/day6/나라장터에서 입찰공고목록 수집하기.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": null,
    "id": "6c6ba647",
    "metadata": {},
    "outputs": [],
@@ -23,6 +23,8 @@
     "chrome_options = Options()\n",
     "chrome_options.add_experimental_option('detach', True) # 브라우저 종료방지\n",
     "driver = webdriver.Chrome(options=chrome_options)\n",
+    "\n",
+    "# 웹페이지가 로딩될때가지 최대 10초 대기\n",
     "driver.implicitly_wait(10)\n",
     "# 웹사이트 열기\n",
     "driver.get('https://www.g2b.go.kr/')\n",
@@ -32,12 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": null,
    "id": "a7572b27",
    "metadata": {},
    "outputs": [],
    "source": [
     "입찰공고목록요소 = driver.find_element(By.CSS_SELECTOR, '#mf_wfm_gnb_wfm_gnbMenu_genDepth1_1_genDepth2_0_genDepth3_0_btn_menuLvl3')\n",
+    "\n",
+    "# javascript 코드 실행\n",
     "driver.execute_script(\"arguments[0].click();\", 입찰공고목록요소)"
    ]
   },
@@ -117,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": null,
    "id": "3c5ee32e",
    "metadata": {},
    "outputs": [
@@ -142,12 +146,14 @@
     "  공고명 = 공고명요소.text\n",
     "  driver.execute_script(\"arguments[0].click();\", 공고명요소)\n",
     "  \n",
+    "  # 상세페이지\n",
     "  추정금액요소 = driver.find_element(By.XPATH, '/html/body/div[1]/div[3]/div/div[2]/div/div[2]/div[4]/div/div[17]/table/tbody/tr[2]/td[2]/input')\n",
     "  print(추정금액요소.get_attribute('value'))\n",
     "  추정금액 = 추정금액요소.get_attribute('value')\n",
     "  print(f'공고번호 : {공고번호}')\n",
     "  print(f'공고명 : {공고명}')\n",
     "  print(f'추정금액 : {추정금액}')\n",
+    "  \n",
     "  "
    ]
   }
